reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_nested.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructWithNested>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructWithNested"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructWithNested"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "reflect_demo::tests::basic::TestStructNested"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "reflect_demo::tests::basic::TestStructNested"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
