reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_nested_external_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithNestedExternal::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithNestedExternal"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithNestedExternal",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "reflect_demo::tests::test_lib::TestStructNested"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::test_lib::TestStructNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
]
