reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_with_nested_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructWithNested::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructWithNested"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "std::string::String"
            }
          }
        ]
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructWithNested",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "reflect_demo::tests::basic::TestStructNested"
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
]
